--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,95 @@
-.App {
-  text-align: center;
+/* Sfondo della pagina */
+body {
+  background: linear-gradient(135deg, #ebf3ca, #ffffff); /* Sfondo tenue sfumato (azzurro chiaro a bianco) */
+  margin: 0;
+  padding: 0;
+  color: #000000; /* Colore testo generale */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Logo */
+.logo {
+  width: 170px; /* Dimensione personalizzabile */
+  height: auto;
+  margin: 0 auto;
+  display: block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Card */
+/* Sfondo della card */
+.card {
+  border-radius: 25px;
+  background: rgba(255, 255, 255, 0.059); /* Sfondo semi-trasparente */
+  backdrop-filter: blur(10px); /* Effetto sfocatura */
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Ombra per maggiore profondità */
+  padding: 20px;
+  transition: transform 0.5s ease, opacity 0.5s ease;
+  border: 1px solid rgba(23, 23, 23, 0.097); /* Bordo sottile per evidenziare il vetro */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.card:hover {
+  transform: translateY(-2px) !important;
 }
 
-.App-link {
-  color: #61dafb;
+/* Header della card */
+.card-header {
+  background-color: rgba(255, 255, 138, 0) !important; /* Azzurro opaco */
+  color: #ffffff !important; /* Testo dorato */
+  text-align: center !important;
+  padding: 1rem !important;
+  font-weight: bold !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mb-0  {
+  color: #000000;
+  font-weight: bold;
+}
+.d-flex {
+  border: none !important; 
+}
+/* Lista dei prodotti */
+.list-group-item {
+  background: transparent !important; /* Sfondo trasparente */
+  font-weight: bold !important;
+  border: none !important; /* Rimuove bordi */
+  color: #000000 !important; /* Colore testo */
+  padding: 0.8rem 1rem !important;
+}
+
+.list-group-item .text-danger {
+  color: #000000 !important; 
+  font-weight: bold !important;
+  font-size: 1.1rem !important;
+}
+
+.list-group-item:last-child {
+  border-bottom: none !important;
+}
+
+
+/* Pulsanti del carosello */
+.carousel-control-prev,
+.carousel-control-next {
+  background: none;
+  border: none;
+  width: 50px; /* Riduce la dimensione cliccabile */
+  height: 100%; /* Rende cliccabile l'intera altezza */
+  opacity: 0; /* Nasconde visivamente i pulsanti */
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  bottom: 0;
+  transition: opacity 0.3s ease;
+}
+
+
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  display: none; /* Nasconde le icone */
+}
+
+/* Transizioni fluide per il carosello */
+.carousel-item {
+  transition: transform 0.6s ease-in-out;
 }
